@@ -12,7 +12,7 @@ public class DigiBankService {
     }
 
 
-    public boolean isValid(String input) throws InstantiationException, IllegalAccessException {
+    public boolean isValid(String input) throws Exception {
         char[] chars = input.toCharArray();
         for (int i = 0; i < chars.length; i++) {
             Set<DigiRule> ruleList = characterToRulesMap.get(chars[i]);
@@ -21,8 +21,8 @@ public class DigiBankService {
             for (DigiRule digiRule : ruleList) {
                 Class<? extends DigiRuleHandler> digiRuleHandler = RuleEnum.getDigiRuleHandler(digiRule.getRuleCondition());
                 if (digiRuleHandler == null)
-                    throw new UnsupportedOperationException(digiRule.getRuleCondition()+ " not supported. missing handler for this");
-                DigiRuleHandler handler = digiRuleHandler.newInstance();
+                    throw new UnsupportedOperationException(digiRule.getRuleCondition() + " not supported. missing handler for this");
+                DigiRuleHandler handler = digiRuleHandler.getDeclaredConstructor().newInstance();
                 if (!handler.isValid(input, i, digiRule))
                     return false;
             }
